Removed TUN_CHARACTER from EncounterRecord, so that we can delete EncounterRecord entry without error on constraint

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,6 +21,6 @@
     </welcome-file-list>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/index.xhtml</location>
+        <location>/faces/index.xhtml</location>
     </error-page>
 </web-app>
