Added ScenarioCharacterRecord.  And Web page for ScenarioRecord

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -2,294 +2,106 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
-DiceMasterCreated=DiceMaster was successfully created.
-DiceMasterUpdated=DiceMaster was successfully updated.
-DiceMasterDeleted=DiceMaster was successfully deleted.
-CreateDiceMasterTitle=Create New DiceMaster
-CreateDiceMasterSaveLink=Save
-CreateDiceMasterShowAllLink=Show All DiceMaster Items
-CreateDiceMasterIndexLink=Index
-CreateDiceMasterLabel_id=Id:
-CreateDiceMasterRequiredMessage_id=The Id field is required.
-CreateDiceMasterTitle_id=Id
-CreateDiceMasterLabel_name=Name:
-CreateDiceMasterTitle_name=Name
-CreateDiceMasterLabel_type=Type:
-CreateDiceMasterTitle_type=Type
-EditDiceMasterTitle=Edit DiceMaster
-EditDiceMasterSaveLink=Save
-EditDiceMasterViewLink=View
-EditDiceMasterShowAllLink=Show All DiceMaster Items
-EditDiceMasterIndexLink=Index
-EditDiceMasterLabel_id=Id:
-EditDiceMasterRequiredMessage_id=The Id field is required.
-EditDiceMasterTitle_id=Id
-EditDiceMasterLabel_name=Name:
-EditDiceMasterTitle_name=Name
-EditDiceMasterLabel_type=Type:
-EditDiceMasterTitle_type=Type
-ViewDiceMasterTitle=View
-ViewDiceMasterDestroyLink=Destroy
-ViewDiceMasterEditLink=Edit
-ViewDiceMasterCreateLink=Create New DiceMaster
-ViewDiceMasterShowAllLink=Show All DiceMaster Items
-ViewDiceMasterIndexLink=Index
-ViewDiceMasterLabel_id=Id:
-ViewDiceMasterTitle_id=Id
-ViewDiceMasterLabel_name=Name:
-ViewDiceMasterTitle_name=Name
-ViewDiceMasterLabel_type=Type:
-ViewDiceMasterTitle_type=Type
-ListDiceMasterTitle=List
-ListDiceMasterEmpty=(No DiceMaster Items Found)
-ListDiceMasterDestroyLink=Destroy
-ListDiceMasterEditLink=Edit
-ListDiceMasterViewLink=View
-ListDiceMasterCreateLink=Create New DiceMaster
-ListDiceMasterIndexLink=Index
-ListDiceMasterTitle_id=Id
-ListDiceMasterTitle_name=Name
-ListDiceMasterTitle_type=Type
-MonsterMasterCreated=MonsterMaster was successfully created.
-MonsterMasterUpdated=MonsterMaster was successfully updated.
-MonsterMasterDeleted=MonsterMaster was successfully deleted.
-CreateMonsterMasterTitle=Create New MonsterMaster
-CreateMonsterMasterSaveLink=Save
-CreateMonsterMasterShowAllLink=Show All MonsterMaster Items
-CreateMonsterMasterIndexLink=Index
-CreateMonsterMasterLabel_id=Id:
-CreateMonsterMasterRequiredMessage_id=The Id field is required.
-CreateMonsterMasterTitle_id=Id
-CreateMonsterMasterLabel_type=Type:
-CreateMonsterMasterTitle_type=Type
-CreateMonsterMasterLabel_hitDiceNum=HitDiceNum:
-CreateMonsterMasterTitle_hitDiceNum=HitDiceNum
-CreateMonsterMasterLabel_initiative=Initiative:
-CreateMonsterMasterTitle_initiative=Initiative
-CreateMonsterMasterLabel_speed=Speed:
-CreateMonsterMasterTitle_speed=Speed
-CreateMonsterMasterLabel_ac=Ac:
-CreateMonsterMasterTitle_ac=Ac
-CreateMonsterMasterLabel_acTouch=AcTouch:
-CreateMonsterMasterTitle_acTouch=AcTouch
-CreateMonsterMasterLabel_acFlatFooted=AcFlatFooted:
-CreateMonsterMasterTitle_acFlatFooted=AcFlatFooted
-CreateMonsterMasterLabel_baseAttack=BaseAttack:
-CreateMonsterMasterTitle_baseAttack=BaseAttack
-CreateMonsterMasterLabel_grapple=Grapple:
-CreateMonsterMasterTitle_grapple=Grapple
-CreateMonsterMasterLabel_attack=Attack:
-CreateMonsterMasterTitle_attack=Attack
-CreateMonsterMasterLabel_spaceReach=SpaceReach:
-CreateMonsterMasterTitle_spaceReach=SpaceReach
-CreateMonsterMasterLabel_specialAttacks=SpecialAttacks:
-CreateMonsterMasterTitle_specialAttacks=SpecialAttacks
-CreateMonsterMasterLabel_specialQualities=SpecialQualities:
-CreateMonsterMasterTitle_specialQualities=SpecialQualities
-CreateMonsterMasterLabel_environment=Environment:
-CreateMonsterMasterTitle_environment=Environment
-CreateMonsterMasterLabel_organization=Organization:
-CreateMonsterMasterTitle_organization=Organization
-CreateMonsterMasterLabel_challengeRating=ChallengeRating:
-CreateMonsterMasterTitle_challengeRating=ChallengeRating
-CreateMonsterMasterLabel_treasure=Treasure:
-CreateMonsterMasterTitle_treasure=Treasure
-CreateMonsterMasterLabel_alignment=Alignment:
-CreateMonsterMasterTitle_alignment=Alignment
-CreateMonsterMasterLabel_advancement=Advancement:
-CreateMonsterMasterTitle_advancement=Advancement
-CreateMonsterMasterLabel_levelAdjustment=LevelAdjustment:
-CreateMonsterMasterTitle_levelAdjustment=LevelAdjustment
-CreateMonsterMasterLabel_sizeId=SizeId:
-CreateMonsterMasterTitle_sizeId=SizeId
-CreateMonsterMasterLabel_hitDiceType=HitDiceType:
-CreateMonsterMasterTitle_hitDiceType=HitDiceType
-CreateMonsterMasterLabel_name=Name:
-CreateMonsterMasterTitle_name=Name
-EditMonsterMasterTitle=Edit MonsterMaster
-EditMonsterMasterSaveLink=Save
-EditMonsterMasterViewLink=View
-EditMonsterMasterShowAllLink=Show All MonsterMaster Items
-EditMonsterMasterIndexLink=Index
-EditMonsterMasterLabel_id=Id:
-EditMonsterMasterRequiredMessage_id=The Id field is required.
-EditMonsterMasterTitle_id=Id
-EditMonsterMasterLabel_type=Type:
-EditMonsterMasterTitle_type=Type
-EditMonsterMasterLabel_hitDiceNum=HitDiceNum:
-EditMonsterMasterTitle_hitDiceNum=HitDiceNum
-EditMonsterMasterLabel_initiative=Initiative:
-EditMonsterMasterTitle_initiative=Initiative
-EditMonsterMasterLabel_speed=Speed:
-EditMonsterMasterTitle_speed=Speed
-EditMonsterMasterLabel_ac=Ac:
-EditMonsterMasterTitle_ac=Ac
-EditMonsterMasterLabel_acTouch=AcTouch:
-EditMonsterMasterTitle_acTouch=AcTouch
-EditMonsterMasterLabel_acFlatFooted=AcFlatFooted:
-EditMonsterMasterTitle_acFlatFooted=AcFlatFooted
-EditMonsterMasterLabel_baseAttack=BaseAttack:
-EditMonsterMasterTitle_baseAttack=BaseAttack
-EditMonsterMasterLabel_grapple=Grapple:
-EditMonsterMasterTitle_grapple=Grapple
-EditMonsterMasterLabel_attack=Attack:
-EditMonsterMasterTitle_attack=Attack
-EditMonsterMasterLabel_spaceReach=SpaceReach:
-EditMonsterMasterTitle_spaceReach=SpaceReach
-EditMonsterMasterLabel_specialAttacks=SpecialAttacks:
-EditMonsterMasterTitle_specialAttacks=SpecialAttacks
-EditMonsterMasterLabel_specialQualities=SpecialQualities:
-EditMonsterMasterTitle_specialQualities=SpecialQualities
-EditMonsterMasterLabel_environment=Environment:
-EditMonsterMasterTitle_environment=Environment
-EditMonsterMasterLabel_organization=Organization:
-EditMonsterMasterTitle_organization=Organization
-EditMonsterMasterLabel_challengeRating=ChallengeRating:
-EditMonsterMasterTitle_challengeRating=ChallengeRating
-EditMonsterMasterLabel_treasure=Treasure:
-EditMonsterMasterTitle_treasure=Treasure
-EditMonsterMasterLabel_alignment=Alignment:
-EditMonsterMasterTitle_alignment=Alignment
-EditMonsterMasterLabel_advancement=Advancement:
-EditMonsterMasterTitle_advancement=Advancement
-EditMonsterMasterLabel_levelAdjustment=LevelAdjustment:
-EditMonsterMasterTitle_levelAdjustment=LevelAdjustment
-EditMonsterMasterLabel_sizeId=SizeId:
-EditMonsterMasterTitle_sizeId=SizeId
-EditMonsterMasterLabel_hitDiceType=HitDiceType:
-EditMonsterMasterTitle_hitDiceType=HitDiceType
-EditMonsterMasterLabel_name=Name:
-EditMonsterMasterTitle_name=Name
-ViewMonsterMasterTitle=View
-ViewMonsterMasterDestroyLink=Destroy
-ViewMonsterMasterEditLink=Edit
-ViewMonsterMasterCreateLink=Create New MonsterMaster
-ViewMonsterMasterShowAllLink=Show All MonsterMaster Items
-ViewMonsterMasterIndexLink=Index
-ViewMonsterMasterLabel_id=Id:
-ViewMonsterMasterTitle_id=Id
-ViewMonsterMasterLabel_type=Type:
-ViewMonsterMasterTitle_type=Type
-ViewMonsterMasterLabel_hitDiceNum=HitDiceNum:
-ViewMonsterMasterTitle_hitDiceNum=HitDiceNum
-ViewMonsterMasterLabel_initiative=Initiative:
-ViewMonsterMasterTitle_initiative=Initiative
-ViewMonsterMasterLabel_speed=Speed:
-ViewMonsterMasterTitle_speed=Speed
-ViewMonsterMasterLabel_ac=Ac:
-ViewMonsterMasterTitle_ac=Ac
-ViewMonsterMasterLabel_acTouch=AcTouch:
-ViewMonsterMasterTitle_acTouch=AcTouch
-ViewMonsterMasterLabel_acFlatFooted=AcFlatFooted:
-ViewMonsterMasterTitle_acFlatFooted=AcFlatFooted
-ViewMonsterMasterLabel_baseAttack=BaseAttack:
-ViewMonsterMasterTitle_baseAttack=BaseAttack
-ViewMonsterMasterLabel_grapple=Grapple:
-ViewMonsterMasterTitle_grapple=Grapple
-ViewMonsterMasterLabel_attack=Attack:
-ViewMonsterMasterTitle_attack=Attack
-ViewMonsterMasterLabel_spaceReach=SpaceReach:
-ViewMonsterMasterTitle_spaceReach=SpaceReach
-ViewMonsterMasterLabel_specialAttacks=SpecialAttacks:
-ViewMonsterMasterTitle_specialAttacks=SpecialAttacks
-ViewMonsterMasterLabel_specialQualities=SpecialQualities:
-ViewMonsterMasterTitle_specialQualities=SpecialQualities
-ViewMonsterMasterLabel_environment=Environment:
-ViewMonsterMasterTitle_environment=Environment
-ViewMonsterMasterLabel_organization=Organization:
-ViewMonsterMasterTitle_organization=Organization
-ViewMonsterMasterLabel_challengeRating=ChallengeRating:
-ViewMonsterMasterTitle_challengeRating=ChallengeRating
-ViewMonsterMasterLabel_treasure=Treasure:
-ViewMonsterMasterTitle_treasure=Treasure
-ViewMonsterMasterLabel_alignment=Alignment:
-ViewMonsterMasterTitle_alignment=Alignment
-ViewMonsterMasterLabel_advancement=Advancement:
-ViewMonsterMasterTitle_advancement=Advancement
-ViewMonsterMasterLabel_levelAdjustment=LevelAdjustment:
-ViewMonsterMasterTitle_levelAdjustment=LevelAdjustment
-ViewMonsterMasterLabel_sizeId=SizeId:
-ViewMonsterMasterTitle_sizeId=SizeId
-ViewMonsterMasterLabel_hitDiceType=HitDiceType:
-ViewMonsterMasterTitle_hitDiceType=HitDiceType
-ViewMonsterMasterLabel_name=Name:
-ViewMonsterMasterTitle_name=Name
-ListMonsterMasterTitle=List
-ListMonsterMasterEmpty=(No MonsterMaster Items Found)
-ListMonsterMasterDestroyLink=Destroy
-ListMonsterMasterEditLink=Edit
-ListMonsterMasterViewLink=View
-ListMonsterMasterCreateLink=Create New MonsterMaster
-ListMonsterMasterIndexLink=Index
-ListMonsterMasterTitle_id=Id
-ListMonsterMasterTitle_type=Type
-ListMonsterMasterTitle_hitDiceNum=HitDiceNum
-ListMonsterMasterTitle_initiative=Initiative
-ListMonsterMasterTitle_speed=Speed
-ListMonsterMasterTitle_ac=Ac
-ListMonsterMasterTitle_acTouch=AcTouch
-ListMonsterMasterTitle_acFlatFooted=AcFlatFooted
-ListMonsterMasterTitle_baseAttack=BaseAttack
-ListMonsterMasterTitle_grapple=Grapple
-ListMonsterMasterTitle_attack=Attack
-ListMonsterMasterTitle_spaceReach=SpaceReach
-ListMonsterMasterTitle_specialAttacks=SpecialAttacks
-ListMonsterMasterTitle_specialQualities=SpecialQualities
-ListMonsterMasterTitle_environment=Environment
-ListMonsterMasterTitle_organization=Organization
-ListMonsterMasterTitle_challengeRating=ChallengeRating
-ListMonsterMasterTitle_treasure=Treasure
-ListMonsterMasterTitle_alignment=Alignment
-ListMonsterMasterTitle_advancement=Advancement
-ListMonsterMasterTitle_levelAdjustment=LevelAdjustment
-ListMonsterMasterTitle_sizeId=SizeId
-ListMonsterMasterTitle_hitDiceType=HitDiceType
-ListMonsterMasterTitle_name=Name
-SizeMasterCreated=SizeMaster was successfully created.
-SizeMasterUpdated=SizeMaster was successfully updated.
-SizeMasterDeleted=SizeMaster was successfully deleted.
-CreateSizeMasterTitle=Create New SizeMaster
-CreateSizeMasterSaveLink=Save
-CreateSizeMasterShowAllLink=Show All SizeMaster Items
-CreateSizeMasterIndexLink=Index
-CreateSizeMasterLabel_id=Id:
-CreateSizeMasterRequiredMessage_id=The Id field is required.
-CreateSizeMasterTitle_id=Id
-CreateSizeMasterLabel_sizeName=SizeName:
-CreateSizeMasterTitle_sizeName=SizeName
-CreateSizeMasterLabel_acModifier=AcModifier:
-CreateSizeMasterTitle_acModifier=AcModifier
-EditSizeMasterTitle=Edit SizeMaster
-EditSizeMasterSaveLink=Save
-EditSizeMasterViewLink=View
-EditSizeMasterShowAllLink=Show All SizeMaster Items
-EditSizeMasterIndexLink=Index
-EditSizeMasterLabel_id=Id:
-EditSizeMasterRequiredMessage_id=The Id field is required.
-EditSizeMasterTitle_id=Id
-EditSizeMasterLabel_sizeName=SizeName:
-EditSizeMasterTitle_sizeName=SizeName
-EditSizeMasterLabel_acModifier=AcModifier:
-EditSizeMasterTitle_acModifier=AcModifier
-ViewSizeMasterTitle=View
-ViewSizeMasterDestroyLink=Destroy
-ViewSizeMasterEditLink=Edit
-ViewSizeMasterCreateLink=Create New SizeMaster
-ViewSizeMasterShowAllLink=Show All SizeMaster Items
-ViewSizeMasterIndexLink=Index
-ViewSizeMasterLabel_id=Id:
-ViewSizeMasterTitle_id=Id
-ViewSizeMasterLabel_sizeName=SizeName:
-ViewSizeMasterTitle_sizeName=SizeName
-ViewSizeMasterLabel_acModifier=AcModifier:
-ViewSizeMasterTitle_acModifier=AcModifier
-ListSizeMasterTitle=List
-ListSizeMasterEmpty=(No SizeMaster Items Found)
-ListSizeMasterDestroyLink=Destroy
-ListSizeMasterEditLink=Edit
-ListSizeMasterViewLink=View
-ListSizeMasterCreateLink=Create New SizeMaster
-ListSizeMasterIndexLink=Index
-ListSizeMasterTitle_id=Id
-ListSizeMasterTitle_sizeName=SizeName
-ListSizeMasterTitle_acModifier=AcModifier
+CampaignMasterCreated=CampaignMaster was successfully created.
+CampaignMasterUpdated=CampaignMaster was successfully updated.
+CampaignMasterDeleted=CampaignMaster was successfully deleted.
+CreateCampaignMasterTitle=Create New CampaignMaster
+CreateCampaignMasterSaveLink=Save
+CreateCampaignMasterShowAllLink=Show All CampaignMaster Items
+CreateCampaignMasterIndexLink=Index
+CreateCampaignMasterLabel_id=Id:
+CreateCampaignMasterRequiredMessage_id=The Id field is required.
+CreateCampaignMasterTitle_id=Id
+CreateCampaignMasterLabel_campaignName=CampaignName:
+CreateCampaignMasterTitle_campaignName=CampaignName
+CreateCampaignMasterLabel_master=Master:
+CreateCampaignMasterTitle_master=Master
+EditCampaignMasterTitle=Edit CampaignMaster
+EditCampaignMasterSaveLink=Save
+EditCampaignMasterViewLink=View
+EditCampaignMasterShowAllLink=Show All CampaignMaster Items
+EditCampaignMasterIndexLink=Index
+EditCampaignMasterLabel_id=Id:
+EditCampaignMasterRequiredMessage_id=The Id field is required.
+EditCampaignMasterTitle_id=Id
+EditCampaignMasterLabel_campaignName=CampaignName:
+EditCampaignMasterTitle_campaignName=CampaignName
+EditCampaignMasterLabel_master=Master:
+EditCampaignMasterTitle_master=Master
+ViewCampaignMasterTitle=View
+ViewCampaignMasterDestroyLink=Destroy
+ViewCampaignMasterEditLink=Edit
+ViewCampaignMasterCreateLink=Create New CampaignMaster
+ViewCampaignMasterShowAllLink=Show All CampaignMaster Items
+ViewCampaignMasterIndexLink=Index
+ViewCampaignMasterLabel_id=Id:
+ViewCampaignMasterTitle_id=Id
+ViewCampaignMasterLabel_campaignName=CampaignName:
+ViewCampaignMasterTitle_campaignName=CampaignName
+ViewCampaignMasterLabel_master=Master:
+ViewCampaignMasterTitle_master=Master
+ListCampaignMasterTitle=List
+ListCampaignMasterEmpty=(No CampaignMaster Items Found)
+ListCampaignMasterDestroyLink=Destroy
+ListCampaignMasterEditLink=Edit
+ListCampaignMasterViewLink=View
+ListCampaignMasterCreateLink=Create New CampaignMaster
+ListCampaignMasterIndexLink=Index
+ListCampaignMasterTitle_id=Id
+ListCampaignMasterTitle_campaignName=CampaignName
+ListCampaignMasterTitle_master=Master
+ScenarioRecordCreated=ScenarioRecord was successfully created.
+ScenarioRecordUpdated=ScenarioRecord was successfully updated.
+ScenarioRecordDeleted=ScenarioRecord was successfully deleted.
+CreateScenarioRecordTitle=Create New ScenarioRecord
+CreateScenarioRecordSaveLink=Save
+CreateScenarioRecordShowAllLink=Show All ScenarioRecord Items
+CreateScenarioRecordIndexLink=Index
+CreateScenarioRecordLabel_id=Id:
+CreateScenarioRecordRequiredMessage_id=The Id field is required.
+CreateScenarioRecordTitle_id=Id
+CreateScenarioRecordLabel_name=Name:
+CreateScenarioRecordTitle_name=Name
+CreateScenarioRecordLabel_description=Description:
+CreateScenarioRecordTitle_description=Description
+CreateScenarioRecordLabel_campaign=Campaign:
+CreateScenarioRecordTitle_campaign=Campaign
+EditScenarioRecordTitle=Edit ScenarioRecord
+EditScenarioRecordSaveLink=Save
+EditScenarioRecordViewLink=View
+EditScenarioRecordShowAllLink=Show All ScenarioRecord Items
+EditScenarioRecordIndexLink=Index
+EditScenarioRecordLabel_id=Id:
+EditScenarioRecordRequiredMessage_id=The Id field is required.
+EditScenarioRecordTitle_id=Id
+EditScenarioRecordLabel_name=Name:
+EditScenarioRecordTitle_name=Name
+EditScenarioRecordLabel_description=Description:
+EditScenarioRecordTitle_description=Description
+EditScenarioRecordLabel_campaign=Campaign:
+EditScenarioRecordTitle_campaign=Campaign
+ViewScenarioRecordTitle=View
+ViewScenarioRecordDestroyLink=Destroy
+ViewScenarioRecordEditLink=Edit
+ViewScenarioRecordCreateLink=Create New ScenarioRecord
+ViewScenarioRecordShowAllLink=Show All ScenarioRecord Items
+ViewScenarioRecordIndexLink=Index
+ViewScenarioRecordLabel_id=Id:
+ViewScenarioRecordTitle_id=Id
+ViewScenarioRecordLabel_name=Name:
+ViewScenarioRecordTitle_name=Name
+ViewScenarioRecordLabel_description=Description:
+ViewScenarioRecordTitle_description=Description
+ViewScenarioRecordLabel_campaign=Campaign:
+ViewScenarioRecordTitle_campaign=Campaign
+ListScenarioRecordTitle=List
+ListScenarioRecordEmpty=(No ScenarioRecord Items Found)
+ListScenarioRecordDestroyLink=Destroy
+ListScenarioRecordEditLink=Edit
+ListScenarioRecordViewLink=View
+ListScenarioRecordCreateLink=Create New ScenarioRecord
+ListScenarioRecordIndexLink=Index
+ListScenarioRecordTitle_id=Id
+ListScenarioRecordTitle_name=Name
+ListScenarioRecordTitle_description=Description
+ListScenarioRecordTitle_campaign=Campaign
