Completed Senario List page and Create page.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,7 +17,7 @@
         <session-timeout>5</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>faces/scenarioRecord/List.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
