--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=/Users/kaizawa/.netbeans/7.1/gfv3-1111431103.properties
+deploy.ant.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.2.1/gfv3-1111431103.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Applications/NetBeans/glassfish-3.1/glassfish/domains/domain1
 j2ee.server.home=/Applications/NetBeans/glassfish-3.1/glassfish
@@ -6,4 +6,4 @@ j2ee.server.instance=[/Applications/NetBeans/glassfish-3.1/glassfish:/Applicatio
 j2ee.server.middleware=/Applications/NetBeans/glassfish-3.1
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/kaizawa/.netbeans/7.1/build.properties
+user.properties.file=/Users/kaizawa/Library/Application Support/NetBeans/7.2.1/build.properties
